# svg-finetuning

./: .env.example  .gitignore  AGENT.md  README.md  index.css  index.html  package-lock.json  package.json  pyproject.toml
backend/: __init__.py  api_handler.py
backend/dataset_pipeline/: __init__.py  config.py
backend/feedback/: __init__.py  gating.py  ingest.py  schema.py
backend/inference/: __init__.py  app.py  contracts.py  endpoint_clients.py  multimodal.py  router.py  schemas.py  sessions.py
backend/training/: __init__.py  canonical_ir.py  dataset_interface.py  diagram_compiler.py  diagram_ir.py  diagram_parser.py  diagram_quality.py  evaluate.py  ir_contract_eval.py  model_registry.py  pipeline_definition.py  preprocess.py  train.py
dataset_pipeline/: __init__.py  config.py  requirements.txt
dataset_pipeline/pipeline/: manifest_writer.py  runner.py
dataset_pipeline/processing/: captioner.py  normalizer.py  validator.py
dataset_pipeline/scrapers/: arxiv_scraper.py  base_scraper.py  wikipedia_scraper.py
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
lambda/: lambda_function.py
src/: App.css  App.jsx  main.jsx
src/components/: PreviewPanel.jsx
src/content/: sampleSvg.js
tests/: test_arxiv_index_tools.py  test_arxiv_scraper.py  test_bulk_source_candidates.py  test_canonical_ir.py  test_captioner.py  test_commoncrawl_index.py  test_corpus_operational_stages.py  test_corpus_pipeline_stages.py  test_corpus_schema.py  test_corpus_source_plan.py  test_dataset_interface.py  test_diagram_compiler.py  test_diagram_ir.py  test_diagram_parser.py  test_diagram_quality.py  test_evaluate.py  test_feedback.py  test_fetch_validate_wikimedia.py  test_inference_app.py  test_inference_contract.py  test_ir_contract_eval.py  test_ir_labeler.py  test_lambda_function.py  test_manifest_writer.py  test_normalizer.py  test_pipeline_definition.py  test_router.py  test_runner.py  test_strict_ir_manifest.py  test_svg_ir_extractor.py  test_synthetic_strict_ir_corpus.py  test_train_dataset.py  test_validator.py  test_website_assets.py  test_wikimedia_dump_scraper.py  test_wikipedia_cache.py  test_wikipedia_scraper.py
tools/: __init__.py
tools/corpus/: __init__.py  (+19 more)
training/: dataset_interface.py  train.py
(+44 files in other folders)
